# TP2_Diaco_Gurevich

./: README.md
Ej1/: CMakeLists.txt  pokedex.hpp
Ej1/example/: main  main.cpp
Ej1/headers/: pokedex.hpp  pokemon.hpp  pokemonInfo.hpp
Ej1/src/: pokedex.cpp  pokemon.cpp  pokemonInfo.cpp
Ej2/: CMakeLists.txt
Ej2/example/: main.cpp
Ej2/examples/: main.cpp
Ej2/headers/: despegue.hpp  drone.hpp
Ej2/src/: despegue.cpp  drone.cpp
Ej3/: CMakeLists.txt  main.cpp  programa
Ej3/example/: main  main.cpp
